--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -44,7 +44,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ffmpeg
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r Docker/requirements.txt
           pip install pygbag pytest pytest-mock flake8
 
       - name: 🧪 Verify Template File Presence
