--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,10 +1,3 @@
-# This workflow will upload a Python Package to PyPI when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
 name: 🚀 Build and Deploy to Web
 
 on:
@@ -20,7 +13,6 @@ on:
     paths-ignore:
       - 'README.md'
       - 'game_setting/**'
-      
 
 permissions:
   contents: read
@@ -31,7 +23,8 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     environment:
-      name: github-pages   # ✅ 新增這一段
+      name: github-pages
+
     steps:
       - name: 📦 Checkout Repository
         uses: actions/checkout@v4
@@ -58,7 +51,7 @@ jobs:
         timeout-minutes: 30
         run: |
           echo "🔧 Building web version with pygbag..."
-          pygbag --build --archive .
+          pygbag --build --archive . --url /oop-2025-proj-group10/
           echo "✅ Pygbag build completed."
 
       - name: 🔎 Verify Build Output
