--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -40,7 +40,7 @@ jobs:
           sudo apt-get install -y ffmpeg
           python -m pip install --upgrade pip
           pip install -r Docker/requirements.txt
-          pip install pygbag pytest pytest-mock flake8
+          pip install pygbag 
 
       - name: 🧪 Verify Template File Presence
         run: |
