更新工作流程以忽略 LICENSE 和 docs 目錄，保持一致性

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -5,14 +5,17 @@ on:
     branches: [ "main" ]
     paths-ignore:
       - 'README.md'
-      - 'LICENSE'
       - '**/*.md'
-      - 'docs/**'
+      - 'resource/**'
+      - 'simulations_plot/**'
   pull_request:
     branches: [ "main" ]
     paths-ignore:
       - 'README.md'
       - 'game_setting/**'
+      - 'resource/**'
+      - 'simulations_plot/**'
+      
 
 permissions:
   contents: read
