--- a/web/index.html.template
+++ b/web/index.html.template
@@ -4,27 +4,12 @@
   <meta charset="utf-8">
   <title>🎮 大學生模擬器</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      background: #111;
-      color: white;
-      font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-    canvas {
-      border: 4px solid white;
-    }
-  </style>
+  <script>
+    const base = "/oop-2025-proj-group10/";
+    window.location.href = base + "index.html";
+  </script>
 </head>
 <body>
-  <h1>🎮 大學生模擬器</h1>
-  <p>Loading game...</p>
-  <!-- pygbag will auto inject the canvas + pyodide loader -->
+  <noscript>請開啟 JavaScript</noscript>
 </body>
 </html>
